# crewai-deployment

./: README.md  pyproject.toml
src/deployment/: main.py
